port drag switch/drop window feature to qml

BUG: 310475
REVIEW: 107843